Hide scrolling unless menu content overflows parent, fixes #4024

--- a/packages/augur-ui/src/modules/app/components/inner-nav/inner-nav.styles.less
+++ b/packages/augur-ui/src/modules/app/components/inner-nav/inner-nav.styles.less
@@ -4,10 +4,11 @@
   height: 100%;
   overflow: auto;
   position: relative;
+  background: @color-dark-grey;
+  padding-bottom: 2rem;
 }
 
 .InnerNav__menu {
-  height: 100%;
   list-style: none;
   margin: 0;
   overflow-x: hidden;
